// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdentificationsCount renders default reliably 1`] = `
<View
  accessibilityLabel="1 identification"
  accessible={true}
  style={
    [
      [
        {
          "flexDirection": "row",
        },
        {
          "alignItems": "center",
        },
      ],
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#454545",
          "fontSize": 14,
        },
        null,
        {
          "fontFamily": "INatIcon",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
  <Text
    maxFontSizeMultiplier={2}
    style={
      [
        {
          "color": "#454545",
        },
        {
          "fontFamily": "Lato-Regular",
        },
        [
          {
            "textAlign": "left",
          },
          [
            {
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "fontFamily": "Lato-Medium",
            },
            [
              {
                "marginLeft": 6,
              },
            ],
          ],
        ],
      ]
    }
  >
    1
  </Text>
</View>
`;

exports[`IdentificationsCount renders filled reliably 1`] = `
<View
  accessibilityLabel="1 identification"
  accessible={true}
  style={
    [
      [
        {
          "flexDirection": "row",
        },
        {
          "alignItems": "center",
        },
      ],
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#454545",
          "fontSize": 14,
        },
        null,
        {
          "fontFamily": "INatIcon",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
  <Text
    maxFontSizeMultiplier={2}
    style={
      [
        {
          "color": "#454545",
        },
        {
          "fontFamily": "Lato-Regular",
        },
        [
          {
            "textAlign": "left",
          },
          [
            {
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "fontFamily": "Lato-Medium",
            },
            [
              {
                "marginLeft": 6,
              },
            ],
          ],
        ],
      ]
    }
  >
    1
  </Text>
</View>
`;

exports[`IdentificationsCount renders white reliably 1`] = `
<View
  accessibilityLabel="1 identification"
  accessible={true}
  style={
    [
      [
        {
          "flexDirection": "row",
        },
        {
          "alignItems": "center",
        },
      ],
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#ffffff",
          "fontSize": 14,
        },
        null,
        {
          "fontFamily": "INatIcon",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
  <Text
    maxFontSizeMultiplier={2}
    style={
      [
        {
          "color": "#454545",
        },
        {
          "fontFamily": "Lato-Regular",
        },
        [
          {
            "textAlign": "left",
          },
          [
            {
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "fontFamily": "Lato-Medium",
            },
            [
              {
                "marginLeft": 6,
              },
              {
                "color": "#ffffff",
              },
            ],
          ],
        ],
      ]
    }
  >
    1
  </Text>
</View>
`;
